--- a/css/app.css
+++ b/css/app.css
@@ -81,6 +81,11 @@ h1 {
     font-size: 33px;
 }
 
+.deck .card.fail {
+    cursor: default;
+    background: orangered;
+    font-size: 33px;
+}
 /*
  * Styles for the Score Panel
  */
