--- a/css/app.css
+++ b/css/app.css
@@ -33,6 +33,18 @@ h1 {
     font-weight: 300;
 }
 
+@media screen and (min-width: 470px) {
+    h1 {
+        font-size: 3em;
+    }
+}
+
+@media screen and (min-width: 850px) {
+    h1 {
+        font-size: 2em;
+    }
+}
+
 /*
  * Styles for the deck of cards
  */
