--- a/css/app.css
+++ b/css/app.css
@@ -125,6 +125,17 @@ h1 {
     cursor: pointer;
 }
 
+.modal-stars {
+    display: inline-block;
+}
+
+.modal-stars li {
+    list-style: none;
+    display: inline-block;
+    font-size: 5em;
+    color: #ffdf00;
+}
+
 /* CSS animations from https://daneden.github.io/animate.css/ */
 .animated {
     -webkit-animation-duration: 1s;
